crates/test-ui/ui/add_method_no_bool.stderr
error[E0277]: the trait bound `bool: Encode` is not satisfied
 --> ui/add_method_no_bool.rs
  |
  |     builder.add_method(sel!(myBoolTakingMethod:), method);
  |             ----------                            ^^^^^^ the trait `Encode` is not implemented for `bool`, which is required by `unsafe extern "C" fn(&NSObject, objc2::runtime::Sel, bool): MethodImplementation`
  |             |
  |             required by a bound introduced by this call
  |
  = help: the following other types implement trait `Encode`:
            &'a T
            &'a mut T
            *const T
            *mut T
            AtomicI16
            AtomicI32
            AtomicI64
            AtomicI8
          and $N others
  = note: required for `bool` to implement `EncodeArgument`
  = note: required for `unsafe extern "C" fn(&NSObject, objc2::runtime::Sel, bool)` to implement `MethodImplementation`
note: required by a bound in `ClassBuilder::add_method`
 --> $WORKSPACE/crates/objc2/src/runtime/declare.rs
  |
  |     pub unsafe fn add_method<T, F>(&mut self, sel: Sel, func: F)
  |                   ---------- required by a bound in this associated function
...
  |         F: MethodImplementation<Callee = T>,
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ClassBuilder::add_method`

error[E0277]: the trait bound `bool: Encode` is not satisfied
 --> ui/add_method_no_bool.rs
  |
  |     builder.add_method(sel!(myBoolReturningMethod), method);
  |             ----------                              ^^^^^^ the trait `Encode` is not implemented for `bool`, which is required by `unsafe extern "C" fn(&NSObject, objc2::runtime::Sel) -> bool: MethodImplementation`
  |             |
  |             required by a bound introduced by this call
  |
  = help: the following other types implement trait `Encode`:
            &'a T
            &'a mut T
            *const T
            *mut T
            AtomicI16
            AtomicI32
            AtomicI64
            AtomicI8
          and $N others
  = note: required for `bool` to implement `EncodeReturn`
  = note: required for `unsafe extern "C" fn(&NSObject, objc2::runtime::Sel) -> bool` to implement `MethodImplementation`
note: required by a bound in `ClassBuilder::add_method`
 --> $WORKSPACE/crates/objc2/src/runtime/declare.rs
  |
  |     pub unsafe fn add_method<T, F>(&mut self, sel: Sel, func: F)
  |                   ---------- required by a bound in this associated function
...
  |         F: MethodImplementation<Callee = T>,
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ClassBuilder::add_method`
